--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -37,15 +37,74 @@
         <div class="container column">
             <div class="banner_headline">
 
+                <h1>Top notch experience</h1>
+
+                <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+
             </div>  
 
             <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner_title">Emergency Case</div>
 
+                    <div class="banner_desc">Algum texto qualquer</div>
+
+                    <a href="#">Read more</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner_title">Doctor Timetable</div>
+
+                    <div class="banner_desc">Algum texto qualquer</div>
+
+                    <a href="#">Read more</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner_title">Opening Hour</div>
+                </div>
             </div>
         </div>
 
     </section>
 
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Latest News</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
 
+                    <div class="widget_body">
+                        
+                    </div>
+                </div>
+            </section>
+
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Deparments</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+
+                    <div class="widget_body">
+
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Make An appointment</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+
+                    <div class="widget_body">
+                        
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </section>
 </body>
 </html>
