--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=0"> <!--user-scalable=0 para não dar zoom -->
     <title>MediCenter</title>
 
+    <script src="assets/js/script.js"></script>
+
     <link rel="stylesheet" type="text/css" href="assets/css/template.css">
 </head>
 <body>
@@ -20,6 +22,11 @@
 
             <div class="menu">
                 <nav>
+                    <div class="menuMobile">
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                    </div>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">Home</a></li>
