--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -216,6 +216,15 @@
 
                     <div class="widget_body">
 
+                        <div class="container_2">
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                        </div>
+
                     </div>
                 </div>
 
