--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -235,7 +235,26 @@
                     </div>
 
                     <div class="widget_body">
-                        
+                        <div>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quas! Cumque eos quidem illum modi unde, fugit ipsa nostrum, voluptatem repellat ut debitis assumenda iure incidunt totam quam excepturi veniam.
+                        </div>
+
+                        <div class="widget-contact">
+                            <div class="contato">
+                                <div class="img_contact"><img src="assets/images/telefone.png" alt="telefone"></div>
+                                <div class="txt_contact">By phone 555-89389</div>
+
+                            </div>
+                            <div class="contato">
+                                <div class="img_contact"><img src="assets/images/email.png" alt="email"></div>
+                                <div class="txt_contact">By Email medicenter@gmail.com</div>
+                            </div>
+                            <div class="contato">
+                                <div class="img_contact"><img src="assets/images/download.png" alt="caixa"></div>
+                                <div class="txt_contact">or <strong>fill the form</strong> on our contact page</div>
+                            </div>
+                        </div>
+                          
                     </div>
                 </div>
             </aside>
@@ -308,3 +327,6 @@
     </footer>
 </body>
 </html>
+
+
+<!--CENTRALIZAR DIV.WIDGET-->
